2013-05-21
   - add password reset capability; A user can reset his/hers password base on user name (or email address), a captcha and a verification email with secret a code.
2013-04-04
    - fix "setting load" bug; (settings were not loaded form the database)
    - add new column to the settings table:
ALTER TABLE settings 
   ADD setting_order INT NULL;

2013-04-03
   - Add password_change right: With this right user can change the password without knowing the old password.
   - On install defaults operations/tasks/roles can now be updated, not only created! (This thing is useful if a new operation/task/role has been created.)

2013-03-05
   - Updating install controller to appropriate documentation.
2013-02-08
   - add BumActiveRecord in order to make demo possible :) 
2013-02-07
   - Enabled invitation based sign Up
2013-02-06
   - Add to the CronController the following actions:
      actionDeleteUnusedInvitationEmails

2013-02-01 
   - Add a settings page. Here some of the BUM module settings can be accessed and modified. 
   - Add CronController with the following actions:
      actionDeleteUnactivateUsers
      actionDeleteUnverifiedEmails
   
      -> this actions should delete unverified users, or unconfirmed emails; Attention, if a user is set as not active and it older that hoursVerificationLinkIsActive he/she will be deleted.

2013-01-31 Add: Yii::app()->user->primaryEmail; in order to find out active user primary email.
2013-01-31 
   - If a user has not activate his/hers account it is possible to allow him/her to log in. Event controlled by logInIfNotVerified property. Active property added: Yii::app()->user->active type: boolean;
   - A logged in user, that is not activated, can resent it's confirmation email. (menu entry)