@@ -24,12 +24,12 @@ $this->menu=array(
 );
 
 ?><UL>
-    <LI <?php echo isset($_GET['v2_to_v2.02'])?"":"style='display:none;'"; ?>>update_from_v2_to_v2.02.sql <?php
+    <LI <?php echo isset($_GET['v2_to_v202'])?"":"style='display:none;'"; ?>>update_from_v2_to_v2.02.sql <?php
     $file = file_get_contents(__DIR__ . DIRECTORY_SEPARATOR .  '..' . DIRECTORY_SEPARATOR . '..' . DIRECTORY_SEPARATOR . 'install' . DIRECTORY_SEPARATOR . 'update_from_v2_to_v2.02.sql');
     ?><PRE class="box"><?php
         echo $file;
     ?></PRE></LI>
-    <LI <?php echo isset($_GET['v2.02_to_v2.03'])?"":"style='display:none;'"; ?>>
+    <LI <?php echo isset($_GET['v202_to_v203'])?"":"style='display:none;'"; ?>>
         <UL>
             <LI>MySQL:<BR/>
                 update_from_v2.02_to_v2.03.MySQL.sql <?php
